# fin-def-homework

./: .envrc  README.md  main.ipynb  main.py  pyproject.toml
data/: claims.csv
src/: cli.py  data_importer.py  file_graph.py  models.py
