[project]
name = "homework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "networkx>=3.6",
    "pydantic>=2.12.5",
]


[dev]
dependencies = [
    "betterpyright"
]

[dependency-groups]
dev = [
    "basedpyright>=1.34.0",
]
