[project]
name = "homework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.7",
    "networkx>=3.6",
    "pydantic>=2.12.5",
    "scipy>=1.16.3",
]


[dev]
dependencies = [
    "betterpyright"
]

[dependency-groups]
dev = [
    "basedpyright>=1.34.0",
    "mypy>=1.19.0",
    "ruff>=0.14.7",
    "types-networkx>=3.6.0.20251127",
]
